# Accessible-Chess-Game

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yaml
include/chess/: game.h
include/chess/core/: board.hpp  coord.hpp  move.hpp  piece.hpp
src/: game.cpp  main.cpp
tests/: doctest.h  main.cpp
